# lumi

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: sync.yml  upstream-sync.yml
frontend/: Dockerfile  index.example.html  package-lock.json  package.json  webpack.config.ts
frontend/src/: app.ts  service_provider.ts
frontend/src/components/arxiv_discover/: arxiv_discover.scss  arxiv_discover.ts
frontend/src/components/dialogs/tutorial_dialog/: tutorial_dialog.ts
frontend/src/components/dialogs/user_feedback_dialog/: user_feedback_dialog.ts
frontend/src/components/gallery/: home_gallery.scss  home_gallery.ts  home_gallery_tabs.scss  home_gallery_tabs.ts
frontend/src/components/header/: header.ts
frontend/src/components/lumi_content/: lumi_html_figure_content.scss  lumi_html_figure_utils.ts
frontend/src/components/lumi_doc/: lumi_doc.scss  lumi_doc.ts
frontend/src/components/lumi_image/: lumi_image.ts
frontend/src/components/lumi_questions/: answer_item.scss  answer_item.ts  lumi_questions.ts
frontend/src/components/lumi_reader/: lumi_reader.scss  lumi_reader.ts
frontend/src/components/lumi_span/: lumi_span.scss
frontend/src/components/settings/: settings.ts
frontend/src/components/sidebar/: sidebar.ts
frontend/src/components/sidenav/: sidenav.ts
frontend/src/directives/: katex_directive.ts
frontend/src/pair-components/: shared.scss
frontend/src/sass/: _typescale.scss
frontend/src/services/: backend_api.service.ts  document_state.service.ts  history.service.ts  home.service.ts  initialization.service.ts  router.service.ts  settings.service.ts
frontend/src/shared/: answer_highlight_manager.ts  collapse_manager.ts  constants.ts  katex_utils.ts  lumi_doc.ts  lumi_doc_manager.ts  lumi_doc_utils.ts  types.ts  types_local_storage.ts  utils.ts
functions/: .env.example  Dockerfile  README.md  main.py  main_test.py  pyproject.toml  requirements.txt
functions/answers/: answers.py
functions/backend/: __init__.py  app.py  arxiv_sanity.py  config.py  db.py  dependencies.py  doc_chunks.py  queue.py  routes.py  schemas.py  storage.py  worker.py
functions/backend/tests/: __init__.py  test_app.py  test_db_postgres.py  test_worker.py
functions/cron/: arxiv_sanity
functions/data/arxiv_sanity/: arxiv_sanity.db
functions/import_pipeline/: fetch_utils.py  image_utils.py  image_utils_test.py  import_pipeline.py  latex_utils.py  summaries.py
functions/models/: gemini.py
functions/scripts/: arxiv_sanity_cron.sh  arxiv_sanity_daemon.py  arxiv_sanity_ingest.py  backfill_featured_images.py  backfill_local_pdf_section_images.py  backfill_lumi_doc_chunks.py  import_papers_local.py  script_local_import.py
functions/shared/: api.py  lumi_doc.py  lumi_doc_convert.py
