[project]
name = "functions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.12",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==18.2.0",
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "boto3==1.35.93",
    "cachecontrol==0.14.3",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "cloudevents==1.9.0",
    "cryptography==44.0.3",
    "dacite==1.9.2",
    "deprecation==2.1.0",
    "et-xmlfile==2.0.0",
    "fastapi==0.115.6",
    "flask==3.1.0",
    "flask-cors==5.0.1",
    "frozenlist==1.7.0",
    "functions-framework==3.8.2",
    "google-api-core==2.25.0rc1",
    "google-api-python-client==2.169.0",
    "google-auth==2.40.1",
    "google-auth-httplib2==0.2.0",
    "google-cloud-core==2.4.3",
    "google-cloud-firestore==2.20.2",
    "google-cloud-storage==3.1.0",
    "google-crc32c==1.7.1",
    "google-events==0.14.0",
    "google-genai==1.15.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.71.0",
    "grpcio-status==1.71.0",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.5.0",
    "markupsafe==3.0.2",
    "mistletoe==1.4.0",
    "msgpack==1.1.0",
    "multidict==6.4.4",
    "nanoid==2.0.0",
    "nltk==3.9.1",
    "numpy==2.3.0",
    "opencv-python-headless==4.11.0.86",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.0",
    "parameterized==0.9.0",
    "pdf2image==1.17.0",
    "pdfminer-six==20250506",
    "pillow==11.2.1",
    "plastex==3.1",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==5.29.4",
    "psycopg[binary]==3.2.5",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pycryptodome==3.23.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.6.1",
    "pyjwt==2.10.1",
    "pyparsing==3.2.3",
    "pypdf==6.1.3",
    "pypdfium2==4.30.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.36",
    "tabulate==0.9.0",
    "tqdm==4.67.1",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "unidecode==1.4.0",
    "uritemplate==4.1.1",
    "urllib3==2.4.0",
    "uvicorn[standard]==0.32.1",
    "watchdog==6.0.0",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "yarl==1.20.1",
]
